--- a/views/mail.ejs
+++ b/views/mail.ejs
@@ -9,12 +9,10 @@
     <h3><strong style="color: black">E-mail :</strong> <%= mail.email %></h3>
     <h3><strong style="color: black">Subject :</strong> <%= mail.subject %></h3>
     <h3><strong style="color: black">Message :</strong></h3>
-    <h4 style="padding-left:100px">mail.message</h4>
+    <h4 style="padding-left:100px"><%=mail.message%></h4>
 
   </div>
 </section>
-
-
-
-<h3><%= mail.email%></h3>
+<br>
+<br>
 <%- include("footer") -%>
