--- a/views/index.ejs
+++ b/views/index.ejs
@@ -137,10 +137,24 @@
             </div>
           </div>
 
+          <div class="progress">
+            <span class="skill">Java Script<i class="val">70%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+
         </div>
 
         <div class="col-lg-6">
-
+          <div class="progress">
+            <span class="skill">NodeJs<i class="val">80%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
           <div class="progress">
             <span class="skill">Dart <i class="val">60%</i></span>
             <div class="progress-bar-wrap">
