impliment new commit

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -238,7 +238,7 @@
             <h5>2020 - 2024 (Pursuing)</h5>
             <p><em>Shree Swami Atmanand Saraswati Institute of Technology - <a
                   href="https://ssasit.ac.in/">[SSASIT]</a>,Surat, Gujarat</em></p>
-            <p>I completed 4 semesters with <strong>9.7</strong> CPI</p>
+            <p>I completed 6 semesters with <strong>8.77</strong> CPI and 8.26 CGPI</p>
           </div>
           <div class="resume-item">
             <h4>HSC Board 12<sup>th</sup></h4>
@@ -260,7 +260,7 @@
           <div class="resume-item">
             <p>
               <ul>
-                <li><strong>Basic Languages:</strong> JAVA, C, C++.</li>
+                <li><strong>Basic Languages:</strong> JAVA, C, C++, HTML, CSS, JS.</li>
                 <li><strong>Operating System:</strong> Windows, LINUX, UNIX</li>
                 <li><strong>Tools: </strong> Android Studio, vs code, atom etc.</li>
               </ul>
