--- a/views/index.ejs
+++ b/views/index.ejs
@@ -238,7 +238,7 @@
             <h5>2020 - 2024 (Pursuing)</h5>
             <p><em>Shree Swami Atmanand Saraswati Institute of Technology - <a
                   href="https://ssasit.ac.in/">[SSASIT]</a>,Surat, Gujarat</em></p>
-            <p>I completed 6 semesters with <strong>8.77</strong> CPI and 8.26 CGPI</p>
+            <p>I completed 6 semesters with <strong>8.77</strong> CPI and <strong>8.26</strong> CGPI</p>
           </div>
           <div class="resume-item">
             <h4>HSC Board 12<sup>th</sup></h4>
